HLStats ChangeLog
=================

1.61 (tba)
*) New: Russian translation by E][tremist
*) New: New css style blue.css
*) New: favicon.ico now  available ;-)
*) Opposing Force CTF/DM role models added
*) Changed: New Bug Tracker. Now FlySpray
*) Changed: Mysql escape function on PHP now mysql_real_escape_string
*) Changed: cleaner mysql query strings
*) Changed: Opposing Force gamesupport files merged. To upgrade an existing
		installation import the gamesupport file manually to the database
		( thx to h3erbert )
*) Changed: Cleaner gamesupport sql files
*) Fixed: Ticket #28
*) Fixed: Improved Opposing Force gamesupport ( thx to h3rbert )
*) Fixed: Weapon mix up now in oposing force now fixed ( thx to h3rbert )
*) Fixed: FS#33 Old Chart images were not removed.


1.60 (2011-02-10)
*) Note: Works with Perl v5.10.1, MySQL 5.0.51a, Apache 2.2.16
		PHP 5.3.3-6
*) Note: Thx to Schakal for all his help making this release ready !
*) Note: Changed license: CDDL http://www.sun.com/cddl/cddl.html
*) New: HLStats needs MySQL 4.1 and MySQL is the only supported DB yet.
*) New: HLStats needs PHP > 5.2.0 now.
*) New: New design and overall re-write of the web-interface
*) New: Team statistics overview page (thx to goose for the idea)
*) New: Player profile has new myspace field /hls_set myspace url
*) New: Player profile has new facebook field /hls_set facebook url
*) New: Player profile has new jabber field /hls_set jabber url
*) New: Player profile has new steamprofile field /hls_set steamprofile
		url
*) New: Steam profile page lookup via SteamID. BCmath support (PHP) is
		needed.
		http://www.php.net/manual/en/book.bc.php
*) New: Clan Profile can new enter a steam group URL
*) New: Daemon can now lookup country. Using Maxmind GeoIP.
		Please read the documentation on how to use this feature !!
		flags provided by famfamfam
*) New: Players table gets a date on updates. This can be used to show
		Players from current day etc.