@@ -5,6 +5,7 @@ HLStats ChangeLog
 *) New: Russian translation by E][tremist
 *) New: New css style blue.css
 *) New: favicon.ico now  available ;-)
+*) New: Admintool added to clear old signatures ( older then one day )
 *) Opposing Force CTF/DM role models added
 *) Changed: New Bug Tracker. Now FlySpray
 *) Changed: Mysql escape function on PHP now mysql_real_escape_string
